--- a/index.html
+++ b/index.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Заголовок страницы</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Студия</title>
   </head>
+
   <body>
-    <img src="images/company-logo.png" alt="Company" />
-    <h1 class="hello-world">Привет, мир!</h1>
+    <header>
+      <div>
+        <a href="#">WebStudio</a>
+      </div>
+      <nav>
+        <a href="#"> Студія</a>
+        <a href="#">Портфоліо</a>
+        <a href="#">Контакти</a>
+      </nav>
+      <div>
+        <span> info@devstudio.com</span>
+        <span>+38 096 111 11 11</span>
+      </div>
+    </header>
+    <main>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <div>
+          <h6>УВАГА ДО ДЕТАЛЕЙ</h6>
+          <p>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.
+          </p>
+        </div>
+        <div>
+          <h6>ПУНКТУАЛЬНІСТЬ</h6>
+          <p>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.
+          </p>
+        </div>
+        <div>
+          <h6>ПЛАНУВАННЯ</h6>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </div>
+        <div>
+          <h6>СУЧАСНІ ТЕХНОЛОГІЇ</h6>
+          <p>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h2>Чим ми займаємося</h2>
+        
+        <img src="./images/laptop.jpg" alt="laptop"/ <img height="294px" />
+        <img width="370px" /><img left="215px" /> <img top="1058px" />
+
+        <img src="./images/tables.jpg" alt="tables"/ <img height="294px" />
+        <img width="370px" /><img left="615px" /> <img top="1058px" />
+
+        <img src="./images/gradiant.jpg" alt="gradiant"/ <img height="294px" />
+        <img width="370px" /><img left="1015px" /> <img top="1058px" />
+      </section>
+
+      <section>
+        <h2>Наша команда</h2>
+        <img src="images/Product Designer.jpg" alt="Product Designer" /
+        <img height="260px" /> <img width="270px" /> <img top="1632px" />
+        <img left="215px" />
+
+        <img src="images/Frontent Developer.jpg" alt="Frontent Developer" /
+        <img height="" /> <img width="270px" /><img top="1632px" />
+        <img left="515px" />
+
+        <img src="images/Marketing.jpg" alt="Marketing" /
+        <img height="" /> <img width="270px" /><img top="1632px" />
+        <img left="815px" />
+
+        <img src="images/UI Designer.jpg" alt="UI Designer" /
+        <img height="" /> <img width="270px" /> <img top="1632px" />
+        <img left="1115px" />
+      </section>
+    </main>
+
+    <footer>
+      <ul>
+        <logo>WebStudio</logo>
+        <address>м. Київ, пр-т Лесі Українки, 26</address>
+        <email>info@devstudio.com</email>
+        <br><telephonenumber>+38 096 111 11 11</telephonenumber></br>
+      </ul>
+    </footer>
   </body>
-</html
+</html>
