--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
               alt="product-designer"
             />
 
-            <p>Ігор Дем'яненко</p>
-            <h3 lang="en">Product Designer</h3>
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
 
           <li>
@@ -129,8 +129,8 @@
               src="images/Frontent Developer Squoosh.jpg"
               alt="frontent-developer"
             />
-            <p>Ольга Рєпіна</p>
-            <h3 lang="en">Frontend Developer</h3>
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
 
           <li>
@@ -140,8 +140,8 @@
               src="images/marketing-squoosh.jpg"
               alt="marketing"
             />
-            <p>Микола Тарасов</p>
-            <h3 lang="en">Marketing</h3>
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
 
           <li>
@@ -152,8 +152,8 @@
               alt="UI Designer"
             />
 
-            <p>Михайло Єрмаков</p>
-            <h3 lang="en">UI Designer</h3>
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
